# FCCSpringBoot

./: .gitignore  BUILD.bazel  WORKSPACE  dependencies.bzl  maven_install.json  pom.xml
src/main/: BUILD
src/main/java/com/jlamb/bootcamp/: BUILD  BootcampApplication.java
src/main/java/com/jlamb/bootcamp/api/: PersonController.java
src/main/java/com/jlamb/bootcamp/dao/: FakePersonDataAccessService.java  PersonDAO.java  PersonDataAccessService.java
src/main/java/com/jlamb/bootcamp/datasource/: PostgresDatasource.java
src/main/java/com/jlamb/bootcamp/model/: Person.java
src/main/java/com/jlamb/bootcamp/service/: PersonService.java
src/main/resources/: application.yml
src/test/java/com/jlamb/bootcamp/: BootcampApplicationTests.java
